# constant

./: .gitattributes  .gitignore  docker-compose.yml  nginx.conf
api/: Dockerfile  pyproject.toml
api/app/: __init__.py
api/app/routes/: exercise.py
api/migrations/versions/: 2cbead652a88_recreate.py  4521ffba0ae6_main_muscle.py  8c9b79028763_added_another_table.py  9b975df4edff_removed_enum.py  e4ff3bda35cc_added_set_table.py
api/src/app/: __init__.py  config.py  models.py
api/src/app/routes/: __init__.py  auth.py
api/src/migrations/versions/: 6b3f0ade0010_added_user.py  6bbc794bf754_added_foreign_key_to_equipment.py  7fd926107b5e_added_exercise_equipment_execution_steps.py  939df1cd3a9a_added_img_url_to_exercise.py
scraper/: Abdominals.json  Back.json  Calves.json  Chest.json  Shoulders.json  pyproject.toml
scraper/json/: Biceps.json  Legs.json  Triceps.json  links.json
scraper/src/: crop.py  main.py
website/: .dockerignore  Dockerfile  index.html  manifest.json  package-lock.json  package.json
website/src/: App.jsx  index.css
website/src/api/: authService.jsx  exercise.jsx
website/src/components/: AddExerciseModalSheet.jsx  DateSwitcher.jsx  ExerciseCard.jsx  ExerciseSet.jsx  HomeSetCard.jsx  HomeSets.jsx  ModalSheet.jsx  MuscleCategory.jsx  Navbar.jsx  Set.jsx  SetsModalSheet.jsx
website/src/contexts/: ExerciseContext.jsx  SetContext.jsx
website/src/hooks/: context.jsx
website/src/pages/: HomePage.jsx  LoginPage.jsx  SignUpPage.jsx
website/src/styles/: AddExerciseModalSheet.module.css  DateSwitcher.module.css  ExerciseCard.module.css  HomePage.module.css  HomeSetCard.module.css  HomeSets.module.css  LoginPage.module.css  (+5 more)
(+2 files in other folders)
